--- a/VRChat/81/1195981.html
+++ b/VRChat/81/1195981.html
@@ -76,38 +76,13 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "oVYulV27moI8xLYq5Bz6oJsMCNdoh4f7D9Cerw8yckw="></script>
+    "hcxMmNQIK7D+IlpI3gynqOJM+MkC5i8nnA6RPo8VRAg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】Gear necklace ギア・ネックレス","description":"【お知らせ（8月11日）】\n・軽量版チェーン(ポリゴン数が約1/10、シェイプキーなし版）‬を追加してVer 1.5にしました。\n・同時に価格を100円値上げしました。\n‪・既にご購入いただいた方はアップデート版も無料で再DLできます。\n——\n\nVRChat・Unityでの使用を想定した歯車モチーフのネックレスです。\n(Questでの挙動は検証できていません)\n特徴\n・Animatorによってギアが回転します。\n・曲がり具合を調節するシェイプキー付きのチェーンが同梱されています。\n・シェーダーの異なる二種のプレハブが同梱されています。\n・少し重めのデータになります。購入前に仕様をご確認ください。\n\n【モデルの使用条件】\n　改変：OK   商用利用：OK\n　性的・暴力的コンテンツでの使用：NG\n　※詳細は利用規約をご確認ください。","url":"https://booth.pm/ja/items/1195981","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/d4226d01-b958-4710-a35d-de900bd2a76a/i/1195981/dfb10ea7-81c5-4a87-a4e4-8c3608e5148a_base_resized.jpg"}
     </script>
@@ -115,6 +90,8 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
+  </head>
+  <body>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -785,7 +762,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
